--- a/mtaappquest3/mtaappquest3/Info.plist
+++ b/mtaappquest3/mtaappquest3/Info.plist
@@ -36,5 +36,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We use your location to determine your position and orientation.</string>
 </dict>
 </plist>
